solving problems with returning all categories